syntax = "proto3";

package tokenswap;

import "aelf/core.proto";
import "acs1.proto";
import "google/protobuf/timestamp.proto";

service TokenSwapContract {
    option (aelf.csharp_state) = "TokenSwapContract.TokenSwapContractState";
    option (aelf.base) = "acs1.proto";

    rpc CreateSwap(CreateSwapInput) returns (aelf.Hash) {
    }
    rpc CreateSwapRound(CreateSwapRoundInput) returns (google.protobuf.Empty) {
    }
    rpc SwapToken (SwapTokenInput) returns (google.protobuf.Empty) {
    }
    rpc ChangeSwapRatio (ChangeSwapRatioInput) returns (google.protobuf.Empty) {
    }
    rpc Deposit (DepositInput) returns (google.protobuf.Empty) {
    }
    rpc GetSwapInfo(aelf.Hash) returns (SwapInfo) {
    }
    rpc GetSwapPair(GetSwapPairInput) returns (SwapPair) {
    }
    rpc GetSwapRound(GetSwapRoundInput) returns (SwapRound) {
    }
}

message CreateSwapInput {
    int32 origin_token_size_in_byte = 1;
    bool origin_token_numeric_big_endian = 2;
    repeated SwapTargetToken swap_target_token_list =3;
}

message SwapTargetToken{
    string target_token_symbol = 1;
    SwapRatio swap_ratio = 2;
    int64 deposit_amount = 3;
}

message SwapInfo{
    aelf.Hash swap_id = 1;
    int32 origin_token_size_in_byte = 2;
    bool origin_token_numeric_big_endian = 3;
    map<string, aelf.Hash> swap_target_token_map = 4;
    aelf.Address controller = 5;
}

message SwapPair{
    aelf.Hash swap_id = 1;
    int32 origin_token_size_in_byte = 2;
    bool origin_token_numeric_big_endian = 3;
    string target_token_symbol = 4;
    SwapRatio swap_ratio = 5;
    int64 swapped_amount = 6;
    int64 swapped_times = 7;
    int64 round_count = 8;
    int64 deposit_amount = 9;
}

message SwapRatio {
    int64 origin_share = 1;
    int64 target_share = 2;
}

message ChangeSwapRatioInput {
    aelf.Hash swap_id = 1;
    SwapRatio swap_ratio = 2;
    string target_token_symbol = 3;
}

message CreateSwapRoundInput {
    aelf.Hash swap_id = 1;
    aelf.Hash merkle_tree_root = 2;
    int64 round_id = 3;
}

message SwapRound{
    aelf.Hash swap_id = 1;
    aelf.Hash merkle_tree_root = 2;
    google.protobuf.Timestamp start_time = 3;
    int64 swapped_amount = 4;
    int64 swapped_times = 5;
}

message SwapTokenInput{
    aelf.Hash swap_id = 1;
    string origin_amount = 2;
    aelf.MerklePath merkle_path = 3;
    aelf.Address receiver_address = 4;
    aelf.Hash unique_id = 5; // to make every swap unique 
    int64 round_id = 6;
}

message SwapPairAdded{
    option (aelf.is_event) = true;
    aelf.Hash swap_id = 1;
}

message SwapRoundUpdated{
    option (aelf.is_event) = true;
    aelf.Hash merkle_tree_root = 1;
    google.protobuf.Timestamp start_time = 2;
    aelf.Hash swap_id = 3;
}


message DepositInput{
    aelf.Hash swap_id = 1;
    string target_token_symbol = 2;
    int64 amount = 3; 
}

message SwapRatioChanged{
    option (aelf.is_event) = true;
    aelf.Hash swap_id = 1;
    SwapRatio new_swap_ratio = 2;
    string target_token_symbol = 3;
}

message TokenSwapEvent{
    option (aelf.is_event) = true;
    aelf.Address address = 1;
    int64 amount = 2;
    string symbol = 3;
}

message GetSwapPairInput{
    aelf.Hash swap_id = 1;
    string target_token_symbol = 2;
}

message GetSwapRoundInput{
    aelf.Hash swap_id = 1;
    string target_token_symbol = 2;
    int64 round_id = 3;
}
